[project]
name = "pytorchdistributed"
version = "0.1.0"
description = ""
authors = [
    {name = "Askar Nurbekov",email = "nurbekoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
